--- a/assets/sass/style/events.sass
+++ b/assets/sass/style/events.sass
@@ -93,7 +93,7 @@
                 order: 2
 
     .block-pages--grid
-        .grid
+        .pages
             @include grid(1)
         article
             background: var(--color-site)
