--- a/assets/sass/style/pages.sass
+++ b/assets/sass/style/pages.sass
@@ -5,7 +5,7 @@
             font-style: italic
     @include media-breakpoint-up(desktop)
         &.full-width
-            .block-pages--grid .grid
+            .block-pages--grid .pages
                 @include grid(4)
                 .page-title
                     @include h4
