theme and page hero style

--- a/assets/sass/style/pages.sass
+++ b/assets/sass/style/pages.sass
@@ -1,5 +1,10 @@
 .pages__section
     .hero
+        .hero-text
+            margin-top: 0
+            span
+                font-style: italic
+                color: var(--text-color)
         .page-summary
             @include h1
             font-style: italic
